@@ -37,6 +37,7 @@ Bug fixes from 1.3.2
   - Infinite loop on FileUtils.copyDirectory when the destination directory is within
     the source directory [IO-141]
   - Add a copyDirectory() method that makes use of FileFilter [IO-105]
+  - Add moveDirectory() and moveFile() methods [IO-77]
 
 - HexDump
   - HexDump's use of static StringBuffers isn't thread-safe [IO-136]
